--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -390,8 +390,9 @@ jobs:
         run: |
           python --version
           python -m pip install --pre --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple cython
-          python -m pip install--upgrade pip setuptools wheel meson[ninja]==1.2.1 meson-python==0.13.1 versioneer[toml] numpy
-          python -m pip install python-dateutil pytz tzdata hypothesis>=6.84.0 pytest>=7.3.2 pytest-xdist>=3.4.0 pytest-cov
+          python -m pip install --upgrade \
+            pip setuptools wheel meson[ninja]==1.2.1 meson-python==0.13.1 versioneer[toml] numpy \
+            python-dateutil pytz tzdata hypothesis>=6.84.0 pytest>=7.3.2 pytest-xdist>=3.4.0 pytest-cov
           python -m pip install -ve . --no-build-isolation --no-index --no-deps -Csetup-args="--werror"
           python -m pip list
 
